# opensvs

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DEVELOPER_TIPS.md  README.md  TOOLING.txt  configure.sh  cppcheck.suppress  smoke_offscreen.sh  smoke_xcb.sh
.github/workflows/: ci.yml  coverage.yml  release.yml  sanitizers.yml
resources/fixtures/: netgen_sample.json
resources/fixtures/netgen_tutorial/tut1/: bufferA.spice  bufferB.spice  comp.json  comp.out  setup.tcl
resources/fixtures/netgen_tutorial/tut2/: badnets.json  bufferA.spice  bufferBx.spice  setup_tut2b.tcl  setup_tut2c.tcl
resources/fixtures/netgen_tutorial/tut3/: bufferB.spice  comp.json  comp.out
resources/fixtures/netgen_tutorial/tut4/: hier1.spice  hier2.spice
resources/fixtures/netgen_tutorial/tut5/: map9v3_test2.spice
resources/fixtures/netgen_tutorial/tut6/: comp_6c.json  map9v3.spice  map9v3_nolib.spice  map9v3_synth.spice  osu035_stdcells.sp  runtut6c.sh  setup_6d.tcl  setup_6e.tcl
resources/fixtures/netgen_tutorial/tut7/: map9v3_test.spice  setup_7.tcl
resources/fixtures/netgen_tutorial/tut8/: comp_8a.json  morph1.spice  morph2.spice  setup_8b.tcl
resources/fixtures/netgen_tutorial/tut9/: x.spice  y.spice
scripts/: clang-tidy.sh  coverage.sh  cppcheck.sh  pre-commit.sh
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.hpp  main.cpp
src/models/: CircuitTreeModel.cpp  CircuitTreeModel.hpp  DiffEntryCommon.hpp  DiffEntryModel.cpp  DiffEntryModel.hpp  DiffFilterProxyModel.cpp  DiffFilterProxyModel.hpp
src/parsers/: NetgenJsonParser.cpp  NetgenJsonParser.hpp
tests/: CMakeLists.txt  smoke_offscreen.sh  smoke_xcb.sh
tests/models/: CircuitTreeModelTests.cpp  DiffEntryModelTests.cpp  DiffFilterProxyModelTests.cpp
tests/parsers/: NetgenJsonParserTests.cpp
tests/ui/: MainWindowSmokeTests.cpp
